test/fail/as-opt-sub.mo
let emptyIter = { func next() : Null { return null}};
for (i in emptyIter) { // should be accepted
};